# rust-sniper

./: .gitignore  Cargo.toml
src/: main.rs
src/simulation/: Cargo.toml
src/simulation/src/: event.rs  lib.rs
src/simulation/src/abi/: IUniswapV2Factory.abi  IUniswapV3Factory.abi  IUniswapV3Pool.abi  mod.rs
src/simulation/src/dex/: mod.rs  pool.rs
src/simulation/src/executor/: error.rs  mod.rs  transaction.rs
src/simulation/src/executor/sender/: bundle_sender.rs  error.rs  mod.rs  normal_sender.rs
src/simulation/src/portfolio/: builder.rs  error.rs  mod.rs  portfolio.rs  position.rs  profile.rs  statistics.rs  strategy.rs
src/simulation/src/portfolio/repository/: mod.rs  redis.rs
src/simulation/src/simulator/: error.rs  event.rs  mod.rs  simulator.rs
src/simulation/src/simulator/simulation/: error.rs  gas_estimation.rs  helpers.rs  mod.rs  sell_simulation.rs  token_liquidity.rs  token_simulation.rs
src/simulation/src/simulator/simulation/fork_db/: database_error.rs  fork_db.rs  fork_factory.rs  mod.rs
src/simulation/src/simulator/simulation/inspectors/: access_list.rs  mod.rs
src/simulation/src/simulator/simulation/tx_builder/: decode.rs  encode.rs
src/simulation/src/stream/: block.rs  mod.rs  tx.rs
src/simulation/src/token/: mod.rs
src/simulation/src/trader/: error.rs  mod.rs  trader.rs
src/simulation/src/types/: interface.rs  mod.rs
src/simulation/src/utils/: constants.rs  dotenv.rs  encode_packed.rs  mod.rs  state_diff.rs
